--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Validador EAN GS1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="ean-validator.js"></script>
-    <script src="main.js"></script>
+
 </head>
 <body class="d-flex justify-content-center align-items-center vh-100 bg-light">
     <div class="bg-white p-4 rounded shadow" style="max-width: 400px; width: 100%;">
@@ -15,11 +14,14 @@
         <input type="text" class="form-control mb-3" id="inputCodigo">
 
         <div class="d-flex gap-2">
-            <button class="btn btn-primary w-100">Calcular</button>
-            <button class="btn btn-success w-100">Validar</button>
+            <button class="btn btn-primary w-100" onclick="executarCalculo()">Calcular</button>
+            <button class="btn btn-success w-100" onclick="executarValidacao()">Validar</button>
         </div>
 
         <div id="resultado" class="mt-3"></div>
     </div>
+    
+    <script src="ean-validator.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
