--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <input type="text" class="form-control mb-3" id="inputCodigo">
 
         <div class="d-flex gap-2">
-            <button class="btn btn-primary w-100" onclick="executarCalculo()">Calcular</button>
-            <button class="btn btn-success w-100" onclick="executarValidacao()">Validar</button>
+            <button class="btn btn-primary w-100" id="calcular">Calcular</button>
+            <button class="btn btn-success w-100" id="validar">Validar</button>
         </div>
 
         <div id="resultado" class="mt-3"></div>
     </div>
-    
+
     <script src="ean-validator.js"></script>
     <script src="main.js"></script>
 </body>
