--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Validador EAN GS1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
 </head>
+
 <body class="d-flex justify-content-center align-items-center vh-100 bg-light">
     <div class="bg-white p-4 rounded shadow" style="max-width: 400px; width: 100%;">
         <h1>Validador de Código de Barras</h1>
         <p>Aceita EAN-8, EAN-13, UPC-A, GTIN-14</p>
-        <input type="text" class="form-control mb-3" id="inputCodigo">
+        <input type="text" minlength="7" class="form-control mb-3" id="inputCodigo">
 
         <div class="d-flex gap-2">
             <button class="btn btn-primary w-100" id="calcular">Calcular</button>
@@ -23,5 +23,6 @@
 
     <script src="ean-validator.js"></script>
     <script src="main.js"></script>
+    
 </body>
 </html>
