--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Validador EAN GS1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body class="d-flex justify-content-center align-items-center vh-100 bg-light">
-    <div class="bg-white p-4 rounded shadow" style="max-width: 400px; width: 100%;">
+    <div class="bg-white p-4 rounded shadow border" style="max-width: 400px; width: 100%;">
         <h1>Validador de Código de Barras</h1>
-        <p>Aceita EAN-8, EAN-13, UPC-A, GTIN-14</p>
-        <input type="text" minlength="7" class="form-control mb-3" id="inputCodigo">
+        <p>Aceita EAN-8, EAN-13, UPC-A, GTIN-14.</p>
+        <table class="table table-bordered table-hover table-sm text-start mt-3 mb-4">
+            <thead class="table-light">
+                <tr>
+                    <th scope="col">Tipo</th>
+                    <th scope="col">Dígitos</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr><td>EAN-8</td><td>8</td></tr>
+                <tr><td>UPC-A</td><td>12</td></tr>
+                <tr><td>EAN-13</td><td>13</td></tr>
+                <tr><td>GTIN-14</td><td>14</td></tr>
+            </tbody>
+        </table>
+        <input type="text" class="form-control mb-3" id="inputCodigo">
 
         <div class="d-flex gap-2">
             <button class="btn btn-primary w-100" id="calcular">Calcular</button>
@@ -19,10 +34,12 @@
         </div>
 
         <div id="resultado" class="mt-3"></div>
+        <p class="text-muted small mt-4">
+            Desenvolvido por: Rafael Fontes Tecedor.
+        </p>
     </div>
 
-    <script src="ean-validator.js"></script>
-    <script src="main.js"></script>
-    
+    <script src="/js/ean-validator.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
